cmake_minimum_required(VERSION 3.27)
project(lab_2)

set(CMAKE_CXX_STANDARD 14)

add_executable(problem4 problem4.cpp)
add_executable(problem5 problem5.cpp)
add_executable(problem6 problem6.cpp)
add_executable(problem7 problem7.cpp)
add_executable(problem8 problem8.cpp)
add_executable(problem9 problem9.cpp)
